test/conformance/chainsaw/image-validating-policies/subresources/block-ephemeral-containers/pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ivpol-subresource-namespace
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-ivpol-subresource-namespace
spec:
  containers:
  - name: busybox
    image: mirror.gcr.io/library/busybox:1.35
    command: ["sleep", "300"]
